--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "@harvard-lil/js-wacz": "^0.0.8",
     "commander": "^10.0.0",
+    "loglevel": "^1.8.1",
+    "loglevel-plugin-prefix": "^0.8.4",
     "node-html-parser": "^6.1.5",
     "warcio": "^2.0.1"
   },
