--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wacz-preparator",
-  "version": "0.0.1",
+  "name": "@harvard-lil/wacz-preparator",
+  "version": "0.0.2",
   "description": "📚 CLI and Javascript library for packaging a remote web archive collection into a single WACZ file.",
   "main": "index.js",
   "type": "module",
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/harvard-lil/wacz-preparator#readme",
   "dependencies": {
-    "@harvard-lil/js-wacz": "^0.0.9",
+    "@harvard-lil/js-wacz": "^0.0.11",
     "commander": "^10.0.0",
     "loglevel": "^1.8.1",
     "loglevel-plugin-prefix": "^0.8.4",
